fix team already exist